--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon app.js",
+    "client" : "cd .. && cd client && npm start",
+    "dev" : "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.3.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.14",
     "socket.io": "^4.3.1"
   }
 }
