--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "hover.css": "^2.3.2",
     "phaser": "^3.55.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -37,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "http://localhost:4001"
+  "proxy": "http://localhost:4001"
 }
