--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "phaser": "^3.55.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "socket.io-client": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
