--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
     "hover.css": "^2.3.2",
     "phaser": "^3.55.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-overlays": "^5.1.1",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.3.2",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
