--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3",
+    "unique-string": "^3.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
