--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3",
     "unique-string": "^3.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
