--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^6.3.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.14",
-    "socket.io": "^4.3.1"
+    "socket.io": "^4.3.1",
+    "webpack": "^5.62.1"
   }
 }
