--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,12 @@
     "phaser": "^3.55.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-overlays": "^5.1.1",
     "react-scripts": "^3.4.4",
     "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3",
     "unique-string": "^3.0.0",
-    "web-vitals": "^1.1.2",
-    "webpack": "^4.42.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
