--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chance": "^1.1.8",
     "concurrently": "^6.3.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.14",
